// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders an empty div 1`] = `
<Fragment>
  <style>
    
  .NotificationBadge-styles__activityIndicator {
    width: 0.75rem;
    padding: 0.75rem;
  }
  .NotificationBadge-styles__activityIndicator.NotificationBadge-styles__hasBadge {
    background: transparent;
    width: auto;
    height: auto;
    align-items: center;
    justify-content: center;
    position: static;
    display: flex;
    top: auto;
    right: auto;
    z-index: 1;
    border-radius: 0;
  }
  
  .NotificationBadge-styles__small.NotificationBadge-styles__activityIndicator {
    padding: 0;
  }
  
  </style>
  <div
    className="NotificationBadge-styles__activityIndicator"
  />
</Fragment>
`;

exports[`renders an indicator 1`] = `
<Fragment>
  <style>
    
  .NotificationBadge-styles__activityIndicator {
    width: 0.75rem;
    padding: 0.75rem;
  }
  .NotificationBadge-styles__activityIndicator.NotificationBadge-styles__hasBadge {
    background: transparent;
    width: auto;
    height: auto;
    align-items: center;
    justify-content: center;
    position: static;
    display: flex;
    top: auto;
    right: auto;
    z-index: 1;
    border-radius: 0;
  }
  
  .NotificationBadge-styles__small.NotificationBadge-styles__activityIndicator {
    padding: 0;
  }
  
  </style>
  <div
    className="NotificationBadge-styles__activityIndicator NotificationBadge-styles__hasBadge"
  >
    <Animatable(NewActivityIndicator)
      itemIds={
        [
          "first",
          "second",
        ]
      }
      title="blah"
    />
  </div>
</Fragment>
`;
